--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,14 @@ project(clustering_correcting_codes_project)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(clustering_correcting_codes_project main.cpp strand.h encoding_algorithim.h encoded_strand.h)
+add_executable(clustering_correcting_codes_project
+        main.cpp
+        strand.h
+        encoding_algorithim.h
+        encoded_strand_binary.h
+        files.h
+        includes.h
+        decoding_algorithim_tests.h
+        decoding_algorithim.h
+        encoding_algorithim_tests.h)
+
